@@ -45,6 +45,8 @@ Notes:
   AWS span. This change also ensures captured errors from failing client
   commands are a child of the AWS span. ({issues}2430[#2430])
 
+* Fixes for run context handling for 'pg' instrumentation. ({issues}2430[#2430])
+
 
 [[release-notes-3.26.0]]
 ==== 3.26.0 2021/12/07
